[project]
name = "mastermind-ai"
version = "0.1.0"
description = "An AI player for the game Mastermind using deep reinforcement learning"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-watch",
    "tqdm",
    "matplotlib",
    "numpy",
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py38"